<resources>
    <string name="app_name">KFitness</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="fab_add">Add</string>

    <string name="menu_home">Home</string>
    <string name="menu_workout">Workouts</string>
    <string name="menu_goal">Goals</string>
    <string name="menu_add_goal">Add/Edit Goal</string>
    <string name="menu_goal_details">Goal Details</string>
    <string name="menu_activity">Activities</string>
    <!-- Strings related to login or register -->
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_back">"Welcome Back!"</string>
    <string name="text_registration">Registration</string>
    <string name="action_register">"Register"</string>
    <string name="action_back_to_sign_in">Back to sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_weight_in_kg">Weight (kg)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="goalStatuses">
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>

</resources>