<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ico_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ico_dot_list"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/nav_workouts"
            android:icon="@drawable/ico_dot_list"
            android:title="@string/menu_workout" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ico_dot_list"
            android:title="@string/menu_goal" />
    </group>
</menu>