<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kmd.kfitness.main.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.kmd.kfitness.main.activities.ActivitiesFragment"
        android:label="@string/menu_activity"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/nav_workouts"
        android:name="com.kmd.kfitness.main.workouts.SlideshowFragment"
        android:label="@string/menu_workout"
        tools:layout="@layout/fragment_workouts" />
</navigation>